ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc
  labels:
    istio-injection: enabled
