ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: poc-ingress
  namespace: poc
spec:
  rules:
  - host: k8s-apps-previos.udd.net
    http:
      paths:
      -
        path: /mvcmovie
        pathType: Prefix
        backend:
          service: 
            name: kiali
            port:
              number: 20001
